--- a/src/App.css
+++ b/src/App.css
@@ -315,11 +315,14 @@ textarea, #message {
   flex-direction: column;
   align-items: flex-end;
   justify-content: center;
+  
+  padding-right: 22px !important;
+
   padding: 5rem 5rem 5rem 3rem;
   /* background-color: rgba(0,0,0,0.3); */
 }
 @media (max-width: 767px) {
-  main {
+  .ok {
       margin-top: 0 !important;
   }
   .about-img{
