--- a/src/App.css
+++ b/src/App.css
@@ -10,11 +10,11 @@ body{
     width: 100vw;
   } */
   .container{
-    max-width: 50vw ;
+    max-width: 61vw !important ;
   }
 }
 .container{
-  max-width: 50vw !important;
+  max-width: 61vw !important;
 }
 ul li{
   padding-bottom: 26px;
@@ -181,9 +181,9 @@ i{
   color: #a5aec0
 }
 
-.logo{
+/* .logo{
   margin-left: 50px;
-}
+} */
 .card {
   width: 20rem;
   height: 400px;
@@ -482,38 +482,18 @@ textarea, #message {
   /* background-color: transparent; */
   width: 300px;
   height: 300px;
-  perspective: 1000px;
+  /* perspective: 1000px; */
 }
 
 .flip-card-inner {
   position: relative;
   width: 100%;
   height: 100%;
-  /* text-align: center; */
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
+  
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-}
 
-.flip-card-front, .flip-card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
 
-/* .flip-card-front {
-  background-color: #bbb;
-  color: black;
-} */
 
-.flip-card-back {
-  background-color: transparent;
-  color: black;
-  transform: rotateY(180deg);
-}
+
